--- a/WebUI/Layout/MainLayout.razor
+++ b/WebUI/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="https://github.com/YSGStudyHards/EasySQLite" target="_blank">About EasySQLite</a>
         </div>
 
         <article class="content px-4">
