--- a/WebUI/Layout/NavMenu.razor
+++ b/WebUI/Layout/NavMenu.razor
@@ -11,12 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> 首页
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="SchoolClass">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 班级管理
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Student">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 学生管理
             </NavLink>
         </div>
         <div class="nav-item px-3">
