--- a/WebUI/Pages/Home.razor
+++ b/WebUI/Pages/Home.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>七天.NET 8操作SQLite入门到实战详细教程</h1>
 
-Welcome to your new app.
+<p>
+SQLite是一个轻量级的嵌入式关系型数据库，它以一个小型的C语言库的形式存在。它是一个自包含、无需服务器、零配置的数据库引擎。与传统的数据库系统不同，SQLite直接读写普通磁盘文件，不需要单独的数据库服务器。它支持标准的SQL查询语言，并提供了事务支持和ACID属性（原子性、一致性、隔离性和持久性）。
+</p>
