--- a/WebUI/Pages/SchoolClassPage.razor
+++ b/WebUI/Pages/SchoolClassPage.razor
@@ -1,4 +1,31 @@
 ﻿@page "/SchoolClass"        
+@using WebUI.Model
 @inject HttpClient httpClient
 
 
+
+<Table TItem="UserInfo" 
+    Items="@UserInfoList" 
+    AutoGenerateColumns="true" 
+    ShowToolbar="true" 
+    IsMultipleSelect="true" 
+    OnSaveAsync="@OnSaveAsync" 
+    IsStriped="true" 
+    IsBordered="true"
+    ShowSearchButton="true">
+    </Table>
+
+
+@code {
+    //模拟生成数据
+    private static readonly Random random = new Random();
+    protected static List<UserInfo> GenerateUserInfos() => new List<UserInfo>(Enumerable.Range(1, 10).Select(i => new UserInfo()
+        {
+            Id = i,
+            Name = $"张三 {i:d4}",
+            Address = $"上海市普陀区金沙江路 {random.Next(1000, 2000)} 弄",
+            Age = random.Next(20, 50),
+            Mobile = "1301234" + random.Next(1000, 9999)
+        }));
+    protected static IEnumerable<UserInfo> UserInfoList { get; } = GenerateUserInfos();
+}
