--- a/WebUI/Pages/SchoolClassPage.razor
+++ b/WebUI/Pages/SchoolClassPage.razor
@@ -1,19 +1,39 @@
-﻿@page "/SchoolClass"        
+﻿@page "/SchoolClass"
 @using WebUI.Model
 @inject HttpClient httpClient
 
 
 
-<Table TItem="UserInfo" 
-    Items="@UserInfoList" 
-    AutoGenerateColumns="true" 
-    ShowToolbar="true" 
-    IsMultipleSelect="true" 
-    OnSaveAsync="@OnSaveAsync" 
-    IsStriped="true" 
-    IsBordered="true"
-    ShowSearchButton="true">
-    </Table>
+<Table TItem="UserInfo"
+       Items="@UserInfoList"
+       AutoGenerateColumns="true"
+       ShowToolbar="true"
+       IsMultipleSelect="true"
+       OnSaveAsync="@OnSaveAsync"
+       IsStriped="true"
+       IsBordered="true"
+       ShowSearch="true"
+       ShowSearchText="true">
+
+    <TableColumns>
+        <TableColumn Sortable="true" Filterable="true" Searchable="true" @bind-Field="@context.Id" />
+        <TableColumn Sortable="true" Filterable="true" Searchable="true" @bind-Field="@context.Name" />
+        <TableColumn Sortable="true" Filterable="true" Searchable="true" @bind-Field="@context.Address" />
+    </TableColumns>
+    <SearchTemplate>
+        <GroupBox Title="搜索条件">
+            <div class="row g-3 form-inline">
+                <div class="col-12 col-sm-6">
+                    <BootstrapInput @bind-Value="@context.Name" PlaceHolder="请输入姓名，50字以内" maxlength="50" ShowLabel="true" DisplayText="@context.Name" />
+                </div>
+                <div class="col-12 col-sm-6">
+                    <BootstrapInput @bind-Value="@context.Address" PlaceHolder="请输入地址，500字以内" maxlength="500" ShowLabel="true" DisplayText="@context.Address" />
+                </div>
+            </div>
+        </GroupBox>
+    </SearchTemplate>
+
+</Table>
 
 
 @code {
