--- a/WebUI/Pages/SchoolClassPage.razor
+++ b/WebUI/Pages/SchoolClassPage.razor
@@ -3,7 +3,7 @@
 @using WebUI.Common
 @using WebUI.Services
 @inject HttpClient _httpClient;
-@inject DataLoader _dataLoader;
+@inject DataLoaderService _dataLoader;
 
 <Table TItem="SchoolClass"
        AutoGenerateColumns="true"
