--- a/WebUI/Pages/StudentEditor.razor
+++ b/WebUI/Pages/StudentEditor.razor
@@ -2,12 +2,12 @@
 @using Microsoft.Extensions.Caching.Memory
 @using WebUI.Services
 @inject HttpClient _httpClient;
-@inject DataLoader _dataLoader;
+@inject DataLoaderService _dataLoader;
 @inject IMemoryCache _memoryCache;
 
 <div class="row g-3 form-inline">
     <div class="col-12">
-        <BootstrapInput @bind-Value="@Value.ClassID" IsDisabled maxlength="50" IsVisibleWhenEdit="false"/>
+        <BootstrapInput @bind-Value="@Value.ClassID" IsDisabled maxlength="50" IsVisibleWhenEdit="false" />
     </div>
     <div class="col-12">
         <Select @bind-Value="@Value.ClassName" Items="Items" />
