--- a/WebUI/Pages/StudentPage.razor
+++ b/WebUI/Pages/StudentPage.razor
@@ -4,7 +4,7 @@
 @using WebUI.Common
 @using WebUI.Services
 @inject HttpClient _httpClient;
-@inject DataLoader _dataLoader;
+@inject DataLoaderService _dataLoader;
 
 <Table TItem="StudentViewModel"
        AutoGenerateColumns="true"
