--- a/WebUI/Pages/StudentEditor.razor
+++ b/WebUI/Pages/StudentEditor.razor
@@ -7,10 +7,10 @@
 
 <div class="row g-3 form-inline">
     <div class="col-12">
-        <BootstrapInput @bind-Value="@Value.ClassID" IsDisabled maxlength="50" IsVisibleWhenEdit="false" />
+        <BootstrapInput @bind-Value="@Value.ClassID" IsDisabled maxlength="50" />
     </div>
     <div class="col-12">
-        <Select @bind-Value="@Value.ClassName" Items="Items" />
+        <Select @bind-Value="@Value.ClassID" OnSelectedItemChanged="OnSelectedItemChanged" Items="Items" />
     </div>
     <div class="col-12">
         <BootstrapInput @bind-Value="@Value.Name" placeholder="请输入学生名称" maxlength="50" required />
